[gd_scene load_steps=12 format=3 uid="uid://cbpbqy3ny0neu"]

[ext_resource type="PackedScene" uid="uid://b0dk8gsoe4wgw" path="res://Screens/GameScreen/Tabs/tab.tscn" id="1_g0b1l"]
[ext_resource type="Script" uid="uid://dk8w1wpuna5su" path="res://Screens/GameScreen/Tabs/EquipmentTab/equipment_tab.gd" id="2_0l1mm"]
[ext_resource type="PackedScene" uid="uid://dojb8cowhicsn" path="res://Screens/GameScreen/Tabs/EquipmentTab/inventory.tscn" id="3_0l1mm"]
[ext_resource type="Script" uid="uid://bl0ltiwiu7efm" path="res://Screens/GameScreen/Tabs/EquipmentTab/current_equips.gd" id="3_ynj1n"]
[ext_resource type="PackedScene" uid="uid://1ksshfruweif" path="res://Graphic Elements/Buttons/passive_super_button.tscn" id="4_nq0vw"]
[ext_resource type="PackedScene" uid="uid://cf38jaj340xkc" path="res://Graphic Elements/TabContainer/my_tab_container.tscn" id="5_bxfkx"]
[ext_resource type="PackedScene" uid="uid://cb0xb20pk0mpa" path="res://Images/SpriteSheets/sprite.tscn" id="5_hoiyj"]
[ext_resource type="PackedScene" uid="uid://cx3yqql81cxuk" path="res://Screens/GameScreen/Tabs/EquipmentTab/paged_equipment_details.tscn" id="5_ynj1n"]
[ext_resource type="Theme" uid="uid://c8cfcbe6ioxu5" path="res://Graphic Elements/Themes/subTab.tres" id="8_jp73e"]
[ext_resource type="PackedScene" uid="uid://bg06kottiuyhf" path="res://Graphic Elements/developer_console.tscn" id="9_hoiyj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nq0vw"]
bg_color = Color(0.458824, 0.458824, 0.458824, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[node name="EquipmentTab" instance=ExtResource("1_g0b1l")]
script = ExtResource("2_0l1mm")

[node name="CurrentEquips" type="Panel" parent="." index="0"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = 15.0
offset_top = 15.0
offset_right = -7.0
offset_bottom = -7.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nq0vw")
script = ExtResource("3_ynj1n")

[node name="HBoxContainer" type="HBoxContainer" parent="CurrentEquips" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Weapon" type="VBoxContainer" parent="CurrentEquips/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Title" type="RichTextLabel" parent="CurrentEquips/HBoxContainer/Weapon" index="0"]
layout_mode = 2
text = "Weapon"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="CurrentEquips/HBoxContainer/Weapon" index="1"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4

[node name="PassiveSuperButton" parent="CurrentEquips/HBoxContainer/Weapon/Panel" index="0" instance=ExtResource("4_nq0vw")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite" parent="CurrentEquips/HBoxContainer/Weapon/Panel/PassiveSuperButton/HBoxContainer" index="0" instance=ExtResource("5_hoiyj")]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="CurrentEquips/HBoxContainer/Weapon" index="2"]
layout_mode = 2
text = " "
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="PagedEquipmentDetails" parent="." index="1" instance=ExtResource("5_ynj1n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
offset_left = 8.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="Inventory" parent="." index="2" instance=ExtResource("5_bxfkx")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 0.5
offset_left = 15.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = -15.0
theme = ExtResource("8_jp73e")

[node name="Background" parent="Inventory" index="1"]
offset_top = 52.0

[node name="InnerContainer" parent="Inventory" index="2"]
offset_top = 52.0

[node name="Weapon" parent="Inventory/InnerContainer" index="0" instance=ExtResource("3_0l1mm")]
layout_mode = 2

[node name="Armor" parent="Inventory/InnerContainer" index="1" instance=ExtResource("3_0l1mm")]
visible = false
layout_mode = 2

[node name="Accessory" parent="Inventory/InnerContainer" index="2" instance=ExtResource("3_0l1mm")]
visible = false
layout_mode = 2

[node name="DeveloperConsole" parent="." index="3" instance=ExtResource("9_hoiyj")]

[connection signal="selectRequested" from="CurrentEquips" to="." method="_on_current_equips_select_requested"]
[connection signal="wasSelected" from="CurrentEquips/HBoxContainer/Weapon/Panel/PassiveSuperButton" to="CurrentEquips" method="_on_equipment_selected"]
[connection signal="discardItemRequested" from="PagedEquipmentDetails" to="." method="_on_discard_requested_from_details"]
[connection signal="equipRequested" from="PagedEquipmentDetails" to="." method="_on_equip_requested_from_details"]
[connection signal="unequipRequested" from="PagedEquipmentDetails" to="." method="_on_unequip_requested_from_details"]
[connection signal="tabChanged" from="Inventory" to="." method="_on_inventory_tab_changed"]
[connection signal="gui_input" from="Inventory/TabButtons/HBoxContainer/Weapon" to="Inventory/TabButtons/HBoxContainer/Weapon" method="_on_gui_input"]
[connection signal="mouse_entered" from="Inventory/TabButtons/HBoxContainer/Weapon" to="Inventory/TabButtons/HBoxContainer/Weapon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Inventory/TabButtons/HBoxContainer/Weapon" to="Inventory/TabButtons/HBoxContainer/Weapon" method="_on_mouse_exited"]
[connection signal="gui_input" from="Inventory/TabButtons/HBoxContainer/Armor" to="Inventory/TabButtons/HBoxContainer/Armor" method="_on_gui_input"]
[connection signal="mouse_entered" from="Inventory/TabButtons/HBoxContainer/Armor" to="Inventory/TabButtons/HBoxContainer/Armor" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Inventory/TabButtons/HBoxContainer/Armor" to="Inventory/TabButtons/HBoxContainer/Armor" method="_on_mouse_exited"]
[connection signal="gui_input" from="Inventory/TabButtons/HBoxContainer/Accessory" to="Inventory/TabButtons/HBoxContainer/Accessory" method="_on_gui_input"]
[connection signal="mouse_entered" from="Inventory/TabButtons/HBoxContainer/Accessory" to="Inventory/TabButtons/HBoxContainer/Accessory" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Inventory/TabButtons/HBoxContainer/Accessory" to="Inventory/TabButtons/HBoxContainer/Accessory" method="_on_mouse_exited"]
[connection signal="equipmentLoadedFromDisk" from="Inventory/InnerContainer/Weapon" to="." method="_on_equipment_loaded_from_disk"]
[connection signal="itemSelected" from="Inventory/InnerContainer/Weapon" to="." method="_on_item_selected_in_inventory"]
[connection signal="equipmentLoadedFromDisk" from="Inventory/InnerContainer/Armor" to="." method="_on_equipment_loaded_from_disk"]
[connection signal="itemSelected" from="Inventory/InnerContainer/Armor" to="." method="_on_item_selected_in_inventory"]
[connection signal="equipmentLoadedFromDisk" from="Inventory/InnerContainer/Accessory" to="." method="_on_equipment_loaded_from_disk"]
[connection signal="itemSelected" from="Inventory/InnerContainer/Accessory" to="." method="_on_item_selected_in_inventory"]
[connection signal="getAllItems" from="DeveloperConsole" to="." method="_on_developer_console_get_all_items"]

[editable path="CurrentEquips/HBoxContainer/Weapon/Panel/PassiveSuperButton"]
[editable path="Inventory"]
